<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_profile"
    tools:context=".Activity.LoginActivity">

    <EditText
        android:id="@+id/etSifreLogin"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_edit_text_mavi"
        android:ems="10"
        android:hint="Şifre"
        android:inputType="textPassword"
        android:textColorHint="@color/soluk_mavi"
        app:layout_constraintEnd_toEndOf="@+id/etKullaniciAdiLogin"
        app:layout_constraintStart_toStartOf="@+id/etKullaniciAdiLogin"
        app:layout_constraintTop_toBottomOf="@+id/etKullaniciAdiLogin" />

    <EditText
        android:id="@+id/etKullaniciAdiLogin"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_edit_text_mavi"
        android:ems="10"
        android:hint="Kullanıcı Adı"
        android:inputType="textPersonName"
        android:textColorHint="@color/soluk_mavi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_btn_text_beyaz"
        android:text="Giriş"
        android:textAlignment="center"
        android:textColor="@color/mavi"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/etSifreLogin"
        app:layout_constraintStart_toStartOf="@+id/etSifreLogin"
        app:layout_constraintTop_toBottomOf="@+id/etSifreLogin" />

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Hesabın yok mu ? Tıkla"
        android:textAlignment="center"
        android:textColor="@color/beyaz"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/etSifreLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>